--- a/data/os/Debian.yaml
+++ b/data/os/Debian.yaml
@@ -1,8 +1,8 @@
 ---
-openldap::server_package: 'slapd'
-openldap::server_service: 'slapd'
-openldap::utils_package: 'ldap-utils'
-openldap::conf_d: '/etc/ldap/slapd.d'
-openldap::ssl_d: '/etc/ldap/ssl'
-openldap::user: 'openldap'
-openldap::group: 'openldap'
+openldap::package::server_package: 'slapd'
+openldap::package::server_service: 'slapd'
+openldap::package::utils_package: 'ldap-utils'
+openldap::package::conf_d: '/etc/ldap/slapd.d'
+openldap::package::ssl_d: '/etc/ldap/ssl'
+openldap::package::user: 'openldap'
+openldap::package::group: 'openldap'
