--- a/data/os/FreeBSD.yaml
+++ b/data/os/FreeBSD.yaml
@@ -1,7 +1,7 @@
 ---
-openldap::server_package: 'openldap-server'
-openldap::server_service: 'slapd'
-openldap::conf_d: '/usr/local/etc/openldap/slapd.d'
-openldap::ssl_d: '/usr/local/etc/openldap/ssl'
-openldap::user: 'ldap'
-openldap::group: 'ldap'
+openldap::server::server_package: 'openldap-server'
+openldap::server::server_service: 'slapd'
+openldap::server::conf_d: '/usr/local/etc/openldap/slapd.d'
+openldap::server::ssl_d: '/usr/local/etc/openldap/ssl'
+openldap::server::user: 'ldap'
+openldap::server::group: 'ldap'
